<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_illustration"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_start_screen_illustration"/>

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/iv_illustration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:textStyle="bold"
        android:textColor="@color/pink_text_color"
        android:text="@string/my_honest_vote" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:textColor="@color/green_text_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/elections_date" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@id/btn_vote"
        android:layout_marginBottom="26dp">
        <TextView
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="анонимно"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#595C63"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Безопастно"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#595C63"/>
        <TextView
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Честно"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#595C63"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_vote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:layout_marginBottom="36dp"
        android:text="@string/vote_btn_title" />

</androidx.constraintlayout.widget.ConstraintLayout>