<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Проголосовали 1,6 млн человек"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textColor="@color/counted_status_color"
        android:background="@drawable/bg_counted_status"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/_2020"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/results_of_votting"
        android:textColor="#595C63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:layout_marginBottom="26dp"
        android:text="@string/share_results" />

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/textView2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/bg_pb"
                android:progress="65"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_horizontal_margin"
                android:paddingEnd="@dimen/default_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="65%  •  Светлана Тихановская"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/bg_pb"
                android:progress="29"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_horizontal_margin"
                android:paddingEnd="@dimen/default_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="29%  •  Против всех кандидатов"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/bg_pb"
                android:progress="13"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_horizontal_margin"
                android:paddingEnd="@dimen/default_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13,067%  •  Лукашенко Александр"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/bg_pb"
                android:progress="12"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_horizontal_margin"
                android:paddingEnd="@dimen/default_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12,5%  •  Дмитриев Андрей"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/bg_pb"
                android:progress="5"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_horizontal_margin"
                android:paddingEnd="@dimen/default_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5,14%  •  Канопацкая Анна"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/bg_pb"
                android:progress="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_horizontal_margin"
                android:paddingEnd="@dimen/default_horizontal_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2,04  •  Черчень Сергей"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>